Fix minor alignment issue

--- a/css/style.css
+++ b/css/style.css
@@ -1079,7 +1079,7 @@ input:focus:invalid {
 }
 
 .results img {
-  height: 80px;
+  height: 72px;
 }
 
 
